--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 <body>
   <div class="container">
     <h1>iktruhs — it works</h1>
-    <h1>Fuck You Adrian.</h1>
+    <h1>Fuck You Timothee Chalamet.</h1>
+    <h1>I Hope You Have A Very Bad Day.</h1>
   </div>
 
   <!-- Leave a comment link -->
