--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     }
 
     .logo {
-      max-width: 180px; /* adjust size here */
+      max-width: 260px;
       width: 100%;
       height: auto;
-      margin-bottom: 20px;
-      opacity: 0.9;
+      margin-bottom: 24px;
+      opacity: 0.95;
     }
 
     a {
@@ -55,8 +55,8 @@
 
 <body>
   <div class="container">
-    <img 
-      src="https://i.imgur.com/vQZ0jxN.png" 
+    <img
+      src="https://i.imgur.com/vQZ0jxN.png"
       alt="iktruhs graphic"
       class="logo"
     >
