--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
       color: #f2f2f2;
       text-align: center;
       min-height: 100vh;
-      padding-top: 160px;
+      padding-top: 220px; /* extra space for bigger logo */
       overflow-x: hidden;
     }
 
     /* Fixed top logo */
     .fixed-logo {
       position: fixed;
-      top: 16px;
+      top: 20px;
       left: 50%;
       transform: translateX(-50%);
       z-index: 2000;
@@ -36,7 +36,7 @@
     }
 
     .fixed-logo img {
-      max-width: 260px;
+      max-width: 360px; /* BIGGER */
       width: 100%;
       height: auto;
       opacity: 0.95;
@@ -44,7 +44,7 @@
     }
 
     .fixed-logo img:hover {
-      transform: scale(1.05);
+      transform: scale(1.06);
       opacity: 1;
     }
 
@@ -60,7 +60,7 @@
 
     /* Closing animation */
     body.closing #page {
-      transform: scale(0.85);
+      transform: scale(0.8);
       opacity: 0;
     }
 
@@ -112,4 +112,5 @@
 
 </body>
 </html>
+
 
