--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>iktruhs</title>
+  <title>yayod</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 10-point star favicon -->
@@ -36,7 +36,7 @@
     }
 
     .fixed-logo img {
-      max-width: 400px;
+      max-width: 350px;
       width: 100%;
       height: auto;
       opacity: 0.95;
