--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>iktruhs</title>
+  <title>yp</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- 10-point star favicon -->
@@ -110,7 +110,7 @@
 
   <!-- Page content wrapper -->
   <div id="page">
-    <h1>iktruhs — it works</h1>
+    <h1>yodskini productions — it works</h1>
     <h1>Fuck You Timothee Chalamet.</h1>
     <h1>I Hope You Have A Very Bad Day.</h1>
     <h1>website still under construction</h1>
