--- a/comments.html
+++ b/comments.html
@@ -76,14 +76,13 @@
     <textarea name="message" rows="5" placeholder="Your Comment" required></textarea>
 
     <!-- Redirect back to main site -->
-    <input type="hidden" name="_next" value="https://yourusername.github.io/">
+    <input type="hidden" name="_next" value="https://iktruhs.com/#comment-sent">
 
     <!-- Disable captcha -->
     <input type="hidden" name="_captcha" value="false">
 
     <button type="submit">Send Comment</button>
   </form>
-
 </body>
 </html>
 
