--- a/index.html
+++ b/index.html
@@ -143,6 +143,11 @@
     }
   </script>
 
+  <footer style="position: fixed; bottom: 10px; width: 100%; text-align: center; opacity: 0.7; font-size: 0.9rem;">
+  © 2026 Yodskini Productions. All rights reserved.
+</footer>
+
+
 </body>
 </html>
 
