--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
     }
   </script>
 
- <footer style="margin-top: 20px; opacity: 0.7; font-size: 0.9rem;">
-  © 2026 Yodskini Productions. All rights reserved.
+<footer style="position: fixed; bottom: 30px; width: 100%; text-align: center; opacity: 0.7; font-size: 0.9rem;">
+  © 2026 iktruhs. All rights reserved.
 </footer>
 
 
