--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   </script>
 
 <footer style="margin-top: 40px; margin-bottom: 30px; opacity: 0.7; font-size: 0.9rem;">
-  © 2026 iktruhs. All rights reserved.
+  © 2026 Yodskini Productions. All rights reserved.
 </footer>
 
 
