--- a/hatelist.html
+++ b/hatelist.html
@@ -81,7 +81,7 @@
       text-decoration: underline;
     }
 
-    /* New bullet list styling */
+    /* Bullet list styling */
     .hate-list {
       list-style-type: disc;
       text-align: left;
@@ -91,6 +91,13 @@
       font-size: 16px;
       line-height: 1.4;
       opacity: 0.9;
+    }
+
+    /* Top title styling */
+    .title {
+      font-size: 48px;
+      letter-spacing: 2px;
+      margin-bottom: 10px;
     }
   </style>
 </head>
@@ -103,10 +110,7 @@
 
   <!-- PAGE -->
   <div id="page">
-    <h1>yodskini productions — it works</h1>
-    <h1>Fuck You Timothee Chalamet.</h1>
-    <h1>I Hope You Have A Very Bad Day.</h1>
-    <h1>website still under construction</h1>
+    <div class="title">HATE LIST</div>
 
     <ul class="hate-list">
       <li>Lorem ipsum dolor sit amet</li>
@@ -125,3 +129,4 @@
   </div>
 </body>
 </html>
+
