--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
     <a href="comments.html">Leave a Comment</a>
     
     <a href="hatelist.html">Hate List</a>
+
+    <a href="fuck.html">Fuck</a>
     
     <div class="contact">
       <h2>contact</h2>
