--- a/fuck.html
+++ b/fuck.html
@@ -31,7 +31,6 @@
       flex-direction: column;
     }
 
-    /* Fixed top logo */
     .fixed-logo {
       position: fixed;
       top: -40px;
@@ -53,7 +52,6 @@
       opacity: 1;
     }
 
-    /* Page wrapper */
     #page {
       flex: 1;
       display: flex;
@@ -68,22 +66,20 @@
       opacity: 0;
     }
 
-    /* Choice Container Styles */
     .choice-section {
       position: relative;
       width: 100%;
-      max-width: 600px; /* Adjusted for better focus on the hands */
+      max-width: 600px;
       margin: 40px auto;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    .hands-bg {
+    .background-main {
       width: 100%;
       height: auto;
       display: block;
-      /* The Hands Image */
     }
 
     .palm-link {
@@ -92,14 +88,14 @@
       z-index: 10;
     }
 
-    /* NB Logo (Left Palm) */
+    /* Left Palm Positioning */
     .left-palm {
       top: 40%;
       left: 21%;
       width: 18%;
     }
 
-    /* NBA Style Logo (Right Palm) */
+    /* Right Palm Positioning */
     .right-palm {
       top: 36%;
       right: 21%;
@@ -158,14 +154,14 @@
     <h1>yodskini productions — it works</h1>
     
     <div class="choice-section">
-      <img src="https://i.imgur.com/yZEwOFG_d.png?maxwidth=520&shape=thumb&fidelity=high" class="hands-bg" alt="hands background">
+      <img src="https://i.imgur.com/7jx6IOz_d.png?maxwidth=520&shape=thumb&fidelity=high" class="background-main" alt="background">
       
       <a href="https://your-destination-1.com" class="palm-link left-palm">
-        <img src="https://i.imgur.com/7jx6IOz_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="NB Logo">
+        <img src="https://i.imgur.com/yZEwOFG_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="Choice 1">
       </a>
 
       <a href="https://your-destination-2.com" class="palm-link right-palm">
-        <img src="https://i.imgur.com/0Rkj7LJ_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="NBA Style Logo">
+        <img src="https://i.imgur.com/0Rkj7LJ_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="Choice 2">
       </a>
     </div>
 
