--- a/fuck.html
+++ b/fuck.html
@@ -154,7 +154,7 @@
     <h1>yodskini productions — it works</h1>
     
     <div class="choice-section">
-      <img src="https://i.imgur.com/7jx6IOz_d.png?maxwidth=520&shape=thumb&fidelity=high" class="background-main" alt="background">
+      <img src="https://i.imgur.com/RBaOvBU_d.png?maxwidth=520&shape=thumb&fidelity=high" class="background-main" alt="background">
       
       <a href="https://your-destination-1.com" class="palm-link left-palm">
         <img src="https://i.imgur.com/yZEwOFG_d.png?maxwidth=520&shape=thumb&fidelity=high" alt="Choice 1">
