--- a/nb.html
+++ b/nb.html
@@ -8,30 +8,54 @@
       margin: 0;
       padding: 0;
       display: flex;
+      flex-direction: column; /* Stack image above text */
       justify-content: center;
       align-items: center;
-      height: 100vh;
-      background-color: #0a0a0a; /* Matches your dark theme */
+      min-height: 100vh;
+      background-color: #0a0a0a;
       font-family: 'Verdana', Geneva, sans-serif;
+      overflow-x: hidden;
+    }
+
+    .image-container {
+      width: 100%;
+      max-width: 500px; /* Limits width so it doesn't get too huge */
+      margin-bottom: 20px;
+    }
+
+    .image-container img {
+      width: 100%;
+      height: auto;
+      display: block;
+      /* "Unstretches" the image by maintaining aspect ratio */
+      object-fit: contain; 
     }
 
     h1 {
       color: #f2f2f2;
-      font-size: 80px; /* Adjust this number to make it bigger/smaller */
+      font-size: 80px;
       font-weight: 900;
       text-transform: uppercase;
       letter-spacing: 4px;
-      text-shadow: 4px 4px 0px rgba(255, 0, 0, 0.5); /* Optional subtle red shadow */
+      margin: 0;
+      text-align: center;
     }
 
     @media (max-width: 600px) {
       h1 {
-        font-size: 40px; /* Resizes for mobile screens */
+        font-size: 40px;
+      }
+      .image-container {
+        max-width: 80%;
       }
     }
   </style>
 </head>
 <body>
+
+  <div class="image-container">
+    <img src="https://i.imgur.com/JdDwVSN.png" alt="Newport Image">
+  </div>
 
   <h1>Newport Boyz</h1>
 
