--- a/fuck.html
+++ b/fuck.html
@@ -13,7 +13,9 @@
     </svg>">
 
   <style>
-    html { scroll-behavior: smooth; }
+    html {
+      scroll-behavior: smooth;
+    }
 
     body {
       margin: 0;
@@ -27,21 +29,6 @@
       overflow-x: hidden;
       display: flex;
       flex-direction: column;
-    }
-
-    /* CLOCK */
-    .clock {
-      position: fixed;
-      top: 14px;
-      right: 16px;
-      font-size: 12px;
-      color: #bdbdbd;
-      letter-spacing: 0.6px;
-      line-height: 1.3;
-      text-align: right;
-      user-select: none;
-      z-index: 3000;
-      opacity: 0.85;
     }
 
     .fixed-logo {
@@ -83,7 +70,7 @@
       position: relative;
       width: 100%;
       max-width: 600px;
-      margin: 40px auto;
+      margin: 40px auto 80px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -97,12 +84,22 @@
 
     .palm-link {
       position: absolute;
-      transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), filter 0.3s ease;
+      transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275),
+                  filter 0.3s ease;
       z-index: 10;
     }
 
-    .left-palm { top: 40%; left: 21%; width: 18%; }
-    .right-palm { top: 32%; right: 21%; width: 14%; }
+    .left-palm {
+      top: 40%;
+      left: 21%;
+      width: 18%;
+    }
+
+    .right-palm {
+      top: 32%;
+      right: 21%;
+      width: 14%;
+    }
 
     .palm-link img {
       width: 100%;
@@ -112,7 +109,24 @@
 
     .palm-link:hover {
       transform: scale(1.3) translateY(-10px);
-      filter: brightness(1.2) drop-shadow(0 0 15px rgba(255, 255, 255, 0.5));
+      filter: brightness(1.2)
+              drop-shadow(0 0 15px rgba(255, 255, 255, 0.5));
+    }
+
+    /* CLOCK BELOW HANDS */
+    .clock {
+      position: absolute;
+      bottom: -48px;
+      left: 50%;
+      transform: translateX(-50%);
+      font-size: 12px;
+      color: #bdbdbd;
+      letter-spacing: 0.6px;
+      line-height: 1.3;
+      text-align: center;
+      user-select: none;
+      opacity: 0.8;
+      z-index: 15;
     }
 
     a {
@@ -148,9 +162,6 @@
 
 <body>
 
-  <!-- CLOCK -->
-  <div class="clock" id="clock"></div>
-
   <div class="fixed-logo" onclick="resetPage()">
     <img src="https://i.imgur.com/ZzvBYMX.png" alt="iktruhs logo">
   </div>
@@ -159,7 +170,11 @@
     <h1>yodskini productions — it works</h1>
 
     <div class="choice-section">
-      <img src="https://i.imgur.com/RBaOvBU_d.png?maxwidth=520&shape=thumb&fidelity=high" class="background-main" alt="background">
+      <img
+        src="https://i.imgur.com/RBaOvBU_d.png?maxwidth=520&shape=thumb&fidelity=high"
+        class="background-main"
+        alt="background"
+      >
 
       <a href="nb.html" class="palm-link left-palm">
         <img src="https://i.imgur.com/yZEwOFG_d.png?maxwidth=520&shape=thumb&fidelity=high">
@@ -168,6 +183,9 @@
       <a href="irs.html" class="palm-link right-palm">
         <img src="https://i.imgur.com/0Rkj7LJ_d.png?maxwidth=520&shape=thumb&fidelity=high">
       </a>
+
+      <!-- CLOCK -->
+      <div class="clock" id="clock"></div>
     </div>
 
     <h1>Fuck You Timothee Chalamet.</h1>
@@ -185,7 +203,9 @@
     </div>
   </div>
 
-  <footer>© 2026 Yodskini Productions. All rights reserved.</footer>
+  <footer>
+    © 2026 Yodskini Productions. All rights reserved.
+  </footer>
 
   <script>
     function resetPage() {
@@ -222,3 +242,4 @@
 
 </body>
 </html>
+
