--- a/nb.html
+++ b/nb.html
@@ -21,7 +21,7 @@
       font-family: Arial, Helvetica, sans-serif;
     }
 
-    /* Clock */
+    /* CLOCK */
     .clock {
       position: fixed;
       top: 14px;
@@ -40,10 +40,10 @@
       position: fixed;
       top: 50%;
       left: 50%;
-      transform: translate(-50%, -50%) rotate(-180deg);
-      width: 60%;
-      max-width: 700px;
-      pointer-events: none; /* doesn't block clicks */
+      width: 40%;
+      max-width: 420px;
+      transform: translate(-50%, -50%) rotate(180deg) scale(0.8);
+      pointer-events: none;
       z-index: 10;
     }
 
@@ -92,4 +92,3 @@
 
 </body>
 </html>
-
