--- a/nb.html
+++ b/nb.html
@@ -35,13 +35,14 @@
       z-index: 20;
     }
 
-    /* OVERLAY IMAGE */
+    /* OVERLAY IMAGE (NO ROTATION) */
     .overlay-image {
       position: fixed;
       top: 50%;
       left: 50%;
       width: 40%;
       max-width: 420px;
+      transform: translate(-50%, -50%) scale(0.8);
       pointer-events: none;
       z-index: 10;
     }
