--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
     <a href="hatelist.html">Hate List</a>
 
     <a href="fuck.html">Fuck</a>
+
+    <a href="about.html">About</a>
     
     <div class="contact">
       <h2>contact</h2>
