--- a/about.html
+++ b/about.html
@@ -13,88 +13,45 @@
       fill='white' stroke='black' stroke-width='2'/>
     </svg>">
 
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
+ <style>
+  /* 1. Define the font-face using your uploaded file */
+  @font-face {
+    font-family: 'Another Typewriter';
+    src: url('another-typewriter.zip/atwriter.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-    body {
-      margin: 0;
-      font-family: Verdana, Geneva, sans-serif;
-      font-weight: 700;
-      background: #0a0a0a;
-      color: #f2f2f2;
-      text-align: center;
-      min-height: 100vh;
-      padding-top: 140px;
-      overflow-x: hidden;
-      display: flex;
-      flex-direction: column;
-    }
+  html {
+    scroll-behavior: smooth;
+  }
 
-    /* Fixed top logo */
-    .fixed-logo {
-      position: fixed;
-      top: -40px;
-      left: 50%;
-      transform: translateX(-50%);
-      z-index: 2000;
-      cursor: pointer;
-    }
+  body {
+    margin: 0;
+    /* 2. Apply the new font to the body */
+    font-family: 'Another Typewriter', Verdana, Geneva, sans-serif;
+    font-weight: 700;
+    background: #0a0a0a;
+    color: #f2f2f2;
+    text-align: center;
+    min-height: 100vh;
+    padding-top: 140px;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+  }
 
-    .fixed-logo img {
-      max-width: 350px;
-      width: 100%;
-      opacity: 0.95;
-      transition: transform 0.25s ease, opacity 0.25s ease;
-    }
+  /* ... rest of your styles ... */
 
-    .fixed-logo img:hover {
-      transform: scale(1.04);
-      opacity: 1;
-    }
-
-    /* Page wrapper */
-    #page {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: 24px;
-      transition: transform 0.6s ease, opacity 0.6s ease;
-    }
-
-    body.closing #page {
-      transform: scale(0.78);
-      opacity: 0;
-    }
-
-    a {
-      color: #f2f2f2;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    a:hover {
-      color: #ffcc00;
-      text-decoration: underline;
-    }
-
-    /* Top title styling */
-    .title {
-      font-size: 40px;  /* KEEP THIS */
-      letter-spacing: 2px;
-      margin-bottom: 10px;
-    }
-
-    /* h1 styling */
-    h1 {
-      font-size: 20px;  /* CHANGE THIS */
-      line-height: 1.3;
-      max-width: 900px;
-      margin: 0 20px;
-    }
-  </style>
+  /* h1 styling */
+  h1 {
+    font-size: 24px; /* Changed as requested */
+    line-height: 1.3;
+    max-width: 900px;
+    margin: 0 20px;
+  }
+</style>
+  
 </head>
 
 <body>
